# enfermedades_ecv

./: LICENSE  Makefile  README.md  pyproject.toml
data/: README.md
docs/: README.md  mkdocs.yml
docs/docs/: index.md
enfermedades_ecv/: __init__.py  dataset.py  features.py  plots.py
enfermedades_ecv/modeling/: predict.py  train.py
notebooks/: 00 - ECV - Carga y Limpieza del dataset.ipynb  01 - ECV - Estadisticas y Modelos.ipynb  README.md
